force-app/main/default/objects/Subtask_Template_Item__c/Subtask_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Subtask Template Item</label>
    <nameField>
        <displayFormat>STI-{0000}</displayFormat>
        <label>Subtask Template Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subtask Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>