force-app/main/default/objects/Subtask_Template_Item__c/fields/Depends_On_Step__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Step__c</fullName>
    <description>Id (as text) of the step that must complete before this one activates. Null means this step opens immediately when the chain starts. A plain Text field rather than a real self-lookup - mirrors the same pattern already used for Task.Parent_Task__c/Waiting_On_Task__c on the Activity object, chosen after a genuine self-referencing Lookup field on this object exhibited unreliable cross-transaction write visibility in this org.</description>
    <label>Depends On Step</label>
    <length>18</length>
    <type>Text</type>
</CustomField>