force-app/main/default/objects/Subtask_Template_Item__c/fields/Dynamic_Assignee_Field__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Assignee_Field__c</fullName>
    <description>API name of the User lookup field on NEOS_Matter__c to read the assignee from (e.g. Senior_Attorney__c), used when Assignee_Type__c is &quot;Dynamic Matter Field&quot;.</description>
    <label>Dynamic Assignee Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>