force-app/main/default/objects/Subtask_Template_Item__c/fields/Sequence_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Order__c</fullName>
    <label>Sequence Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>