force-app/main/default/objects/Subtask_Template_Item__c/fields/Static_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Static_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Static Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Subtask Template Items (Static Assignee)</relationshipLabel>
    <relationshipName>Subtask_Template_Items_Static</relationshipName>
    <type>Lookup</type>
</CustomField>