force-app/main/default/objects/Subtask_Template_Item__c/fields/Subtask_Template__c.field-meta.xml
<CustomField>
    <fullName>Subtask_Template__c</fullName>
    <label>Subtask Template</label>
    <referenceTo>Subtask_Template__c</referenceTo>
    <relationshipLabel>Subtask Template Items</relationshipLabel>
    <relationshipName>Subtask_Template_Items</relationshipName>
    <type>MasterDetail</type>
</CustomField>